--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "clean": "rimraf dist/**/*",
     "clean-build": "npm run clean && npm run build",
-    "preinstall": "npm run build"
+    "postinstall": "npm run build"
   },
   "files": [
     "dist"
