--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "metabot-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "repository": "git@github.com:nyamadori/metabot-bot.git",
   "author": "nyamadori <nyamadorig@gmail.com>",
   "license": "MIT",
-  "types": "dist/index.d.ts",
-  "typings": "dist/index.d.ts",
   "scripts": {
     "lint": "tslint 'src/**/*.ts' '__tests__/**/*.ts'",
     "build": "tsc",
