--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
+  "module": "dist/index.js",
   "repository": "git@github.com:nyamadori/metabot-bot.git",
   "author": "nyamadori <nyamadorig@gmail.com>",
   "license": "MIT",
