--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "metabot-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
+  "module": "dist/index.js",
   "repository": "git@github.com:nyamadori/metabot-bot.git",
   "author": "nyamadori <nyamadorig@gmail.com>",
   "license": "MIT",
@@ -11,8 +14,12 @@
     "test": "jest",
     "clean": "rimraf dist/**/*",
     "clean-build": "npm run clean && npm run build",
-    "prepublish": "npm run clean-build"
+    "prepublish": "npm run clean-build",
+    "postinstall": "npm run build"
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/jest": "^22.2.2",
     "@types/yargs": "^11.0.0",
