--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.2",
     "ts-node": "^5.0.1",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.7.2"
+    "tslint-plugin-prettier": "^1.3.0"
   },
   "dependencies": {
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "typescript": "^2.7.2"
   }
 }
