--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^22.2.2",
     "@types/yargs": "^11.0.0",
     "jest": "^22.4.3",
@@ -30,7 +31,7 @@
     "tslint-plugin-prettier": "^1.3.0"
   },
   "dependencies": {
-    "yargs": "^11.0.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "yargs": "^11.0.0"
   }
 }
