--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "tslint-plugin-prettier": "^1.3.0"
   },
   "dependencies": {
+    "firebase": "^4.12.0",
+    "reflect-metadata": "^0.1.12",
     "typescript": "^2.7.2",
     "yargs": "^11.0.0"
   }
