--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "esModuleInterop": true,
     "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
@@ -28,6 +30,5 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
   ]
 }
